Correction Hessien (rapport et code)

--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -145,9 +145,9 @@
         }\]
 
         Pour calculer le Hessien, on a tout d'abord, en notant $\text{diag}(X)$ la matrice diagonale possédant sur sa diagonale les coefficients de $X$ :
-        \[H F(q) = \text{diag}(r\circ(q + |q|))\]
+        \[H F(q) = 2.\text{diag}(r\circ|q|)\]
         Par composition, étant donné que le $H(q(q_c)) = 0$ :
-        \[ \boxed{H F(q_c) = H F(q(q_c)) = B^T.\text{diag}(r\circ(q + |q|).B}
+        \[ \boxed{H F(q_c) = H F(q(q_c)) = 2.B^T.\text{diag}(r\circ|q|).B}
         \] 
 
     \paragraph{}
